# Game-of-life

Game-of-life/: CMakeLists.txt  Main.qml  driver.cpp  driver.h  gamemodel.cpp  gamemodel.h  main.cpp
